--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -15,13 +14,17 @@
   <body>
     <!-- Nav bar start  -->
     <header>
-      <div class="bg-img">  
+      <div class="bg-img">
         <div class="container-fluid">
           <div class="row">
             <div class="col-12 text-center text-light">
-              <nav class="navbar navbar-expand-lg navbar-light text-light">
+              <nav class="navbar navbar-expand-lg navbar-dark text-light">
                 <a class="navbar-brand" href="#">
-                  <img src="https://mediad.publicbroadcasting.net/p/idaho/files/styles/x_large/public/201409/Yotes_logo.png" alt="" class="logo-image">
+                  <img
+                    src="https://mediad.publicbroadcasting.net/p/idaho/files/styles/x_large/public/201409/Yotes_logo.png"
+                    alt=""
+                    class="logo-image"
+                  />
                 </a>
                 <button
                   class="navbar-toggler"
@@ -34,18 +37,23 @@
                 >
                   <span class="navbar-toggler-icon text-light"></span>
                 </button>
-                <div class="collapse navbar-collapse text-light" id="navbarText">
+                <div
+                  class="collapse navbar-collapse text-light"
+                  id="navbarText"
+                >
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                       <a class="nav-link text-light shadow" href="#"
-                        >Home <span class="sr-only"></span></a
-                      >
+                        >Home <span class="sr-only"></span
+                      ></a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link text-light shadow" href="#">Roster</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-light shadow" href="#">Scholarships</a>
+                      <a class="nav-link text-light shadow" href="#"
+                        >Scholarships</a
+                      >
                     </li>
                   </ul>
                   <span class="navbar-text text-light shadow">
@@ -55,61 +63,85 @@
               </nav>
             </div>
           </div>
-          
           <div class="row">
-            <div class="col-12 col-md-6 text-center text-light">
+            <div class="col-12 col-md-6 order-md-2 text-center video-pad">
+              <iframe
+                width="auto"
+                height="auto"
+                src="https://www.youtube.com/embed/V61GFUptJqM"
+                frameborder="3"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <div class="col-12 col-md-6 order-md-1 text-center text-light">
               <h2>College of Idaho</h2>
               <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem
                 totam corrupti perspiciatis. Alias enim pariatur voluptate
                 doloremque nostrum, ratione, totam sit nobis, nesciunt ut
                 aspernatur similique eius fugiat.
               </p>
-              <div class="text-center"><button type="button" class="btn text-light bg btn-lg top-button grad shadow">Start the Process</button></div>
-            </div>
-            <div class="col-12 col-md-6 text-center video-pad">
-              <iframe width="auto" height="auto" src="https://www.youtube.com/embed/V61GFUptJqM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <div class="text-center">
+                <button
+                  type="button"
+                  class="btn text-light bg btn-lg top-button grad shadow"
+                >
+                  Start the Process
+                </button>
+              </div>
             </div>
           </div>
+        </div>
       </div>
-    </div>
     </header>
- <!-- break after diagonal bg -->
+    <!-- break after diagonal bg -->
     <main>
       <div class="bg-gold">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12 col-md-4 text-center card-pad"><img  class="round-pic" src="//placehold.it/200x200" alt="..">
-            <div class="card w-100">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12 col-md-4 text-center card-pad">
+              <img class="round-pic" src="//placehold.it/200x200" alt=".." />
+              <div class="card w-100">
                 <div class="card-body text-center text-light bg grad">
                   <h5 class="card-title shadow">Yotie Gang</h5>
-                  <p class="card-text>">Lorem ipsum dolor sit, amet consectetur adipisicing elit." </p>
-                  <a href="#" class="btn sm-button text-light shadow-lg">Button</a>
+                  <p class="card-text>">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit."
+                  </p>
+                  <a href="#" class="btn sm-button text-light shadow-lg"
+                    >Join</a
+                  >
                 </div>
               </div>
-        </div>
-          <div class="col-12 col-md-4 text-center card-pad"><img  class="round-pic" src="//placehold.it/200x200" alt="..">
+            </div>
+            <div class="col-12 col-md-4 text-center card-pad">
+              <img class="round-pic" src="//placehold.it/200x200" alt=".." />
               <div class="card w-100">
-                  <div class="card-body text-center text-light bg grad">
-                    <h5 class="card-title shadow">Academics</h5>
-                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit." </p>
-                    <a href="#" class="btn text-light sm-button shadow">Button</a>
-                  </div>
+                <div class="card-body text-center text-light bg grad">
+                  <h5 class="card-title shadow">Academics</h5>
+                  <p class="card-text">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit."
+                  </p>
+                  <a href="#" class="btn text-light sm-button shadow">Apply</a>
                 </div>
-          </div>
-          <div class="col-12 col-md-4 text-center card-pad"><img  class="round-pic" src="//placehold.it/200x200" alt="..">
-            <div class="card w-100">
+              </div>
+            </div>
+            <div class="col-12 col-md-4 text-center card-pad">
+              <img class="round-pic" src="//placehold.it/200x200" alt=".." />
+              <div class="card w-100">
                 <div class="card-body text-center text-light bg grad">
                   <h5 class="card-title shadow">Season Outline</h5>
-                  <p class="card-text>">Lorem ipsum dolor sit, amet consectetur adipisicing elit." </p>
-                  <a href="#" class="btn  text-light sm-button shadow">Button</a>
+                  <p class="card-text>">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit."
+                  </p>
+                  <a href="#" class="btn  text-light sm-button shadow">MCLA</a>
                 </div>
               </div>
-        </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="row-break bg"></div>
+      <div class="row-break bg"></div>
     </main>
     <!-- This is the start of after the line break -->
     <main>
@@ -117,11 +149,21 @@
         <div class="row">
           <div class="col-12 col-md-6 bottom-pic pt-20">
             <div>
-            <img class="w-100" src="https://pbs.twimg.com/media/Dy3UmOcUYAEnYtU.jpg" ></img>
-          </div>
+              <img
+                class="w-100"
+                src="https://pbs.twimg.com/media/Dy3UmOcUYAEnYtU.jpg"
+              />
+            </div>
           </div>
           <div class="col-12 col-md-6 text-center">
-            <p class="bottom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, quae? Illum sed officiis saepe consequatur, vel quis dolore cupiditate suscipit tempora sunt ab, veniam temporibus repellat! Soluta cum voluptate harum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eius repellendus, quos iste et rerum iure dolorem nulla debitis, error voluptas. Iusto minus minima ab quidem at unde doloribus sequi. 
+            <p class="bottom-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Explicabo, quae? Illum sed officiis saepe consequatur, vel quis
+              dolore cupiditate suscipit tempora sunt ab, veniam temporibus
+              repellat! Soluta cum voluptate harum. Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Odit eius repellendus, quos iste et
+              rerum iure dolorem nulla debitis, error voluptas. Iusto minus
+              minima ab quidem at unde doloribus sequi.
             </p>
           </div>
         </div>
@@ -129,55 +171,28 @@
     </main>
     <footer>
       <div class="match">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12 bg text-center grad2">
-            <div> <img src="https://pbs.twimg.com/profile_images/810347579036680192/r5VCHa47_400x400.jpg" alt="..." class="logo-image pt-2 grad2"></div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12 bg text-center grad2">
+              <div>
+                <img
+                  src="https://pbs.twimg.com/profile_images/810347579036680192/r5VCHa47_400x400.jpg"
+                  alt="..."
+                  class="logo-image pt-2 grad2"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="row justify-content-between stack">
+            <div class="col-12 col-md-3 justify-flex-start  text-light">
+              <h6>Campus Tour</h6>
+            </div>
+            <div class="col-12 col-md-3 justify-flex-end text-light">
+              <h6>Contact Us</h6>
+            </div>
           </div>
         </div>
-        <div class="row">
-          <div class=" col-12 col-md-6 stack">
-              <nav class="navbar navbar-expand-lg navbar-light text-light">
-                  <a class="navbar-brand" href="#">
-                    <img src="https://mediad.publicbroadcasting.net/p/idaho/files/styles/x_large/public/201409/Yotes_logo.png" alt="" class="logo-image">
-                  </a>
-                  <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-toggle="collapse"
-                    data-target="#navbarText"
-                    aria-controls="navbarText"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                  >
-                    <span class="navbar-toggler-icon text-light"></span>
-                  </button>
-                  <div class="collapse navbar-collapse text-light" id="navbarText">
-                    <ul class="navbar-nav mr-auto">
-                      <li class="nav-item active">
-                        <a class="nav-link text-light" href="#"
-                          >Home <span class="sr-only"></span></a
-                        >
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link text-light" href="#">Campus</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link text-light" href="#"></a>
-                      </li>
-                    </ul>
-                    <span class="navbar-text text-light linked-2">
-                      Contact
-                    </span>
-                  </div>
-                </nav>
-              </div>
-            </div>
-              </div>
-            </div>
-                    </div>
-                  </div>
-                </div>
-        </footer>
+      </div>
+    </footer>
   </body>
 </html>
